conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
if (estFaceMur()) == False {
                  ^Conditions:2: error: not found: value avancer
  avancer()
  ^Conditions:5: error: not found: value reculer
  reculer()
  ^