conditions.Conditions.scala.code
if (estFaceMur()) == False {
  avancer()
}
else {
  reculer()
}